Output forwarding from bazel processes